# Zadanie

./: CMakeLists.txt  threeSumClosest.h
.github/workflows/: cmake-single-platform.yml
src/: main.cpp
tests/: tests.cpp
